@@ -1,0 +1,1 @@
+co.elastic.apm.agent.struts.Struts2TransactionNameInstrumentation
