@@ -58,6 +58,7 @@
         <module>apm-rabbitmq</module>
         <module>apm-okhttp-test</module>
         <module>apm-cassandra</module>
+        <module>apm-struts-plugin</module>
     </modules>
 
     <dependencies>
