@@ -137,6 +137,11 @@ rendering
 |
 |1.17.0
 
+|Apache Struts
+|2.x
+|The transactions are named based on your action (`ActionClass#actionMethod`).
+|1.24.0
+
 |===
 
 
